# afl-fuzz

./: .config.h.bkp  .config.h.model  .cproject  .gdb_history  .project  .tags  CMakeLists.txt  CMakeLists.txt.user.3509c95  Makefile  README.md  afl-analyze  afl-as  afl-clang  afl-fuzz  afl-fuzz.c  afl-gcc  afl-gotcpu  afl-showmap  afl-tmin  as  config.h  mannual_mapsize  mannual_mapsize.c  readelf  tags
afl-in/: readelf
afl-out/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
afl-out/queue/: id:000001,src:000000,op:flip1,pos:0,+cov  id:000002,src:000000,op:flip1,pos:4,+cov  id:000003,src:000000,op:flip1,pos:4,+cov  id:000004,src:000000,op:flip1,pos:5,+cov  id:000005,src:000000,op:flip1,pos:5,+cov  id:000006,src:000000,op:flip1,pos:6,+cov  id:000007,src:000000,op:flip1,pos:6,+cov  id:000008,src:000000,op:flip1,pos:7,+cov  id:000009,src:000000,op:flip1,pos:7,+cov  id:000010,src:000000,op:flip1,pos:7,+cov  id:000011,src:000000,op:flip1,pos:7,+cov  id:000012,src:000000,op:flip1,pos:7  id:000013,src:000000,op:flip1,pos:7,+cov  id:000014,src:000000,op:flip1,pos:7,+cov  id:000015,src:000000,op:flip1,pos:16,+cov  id:000016,src:000000,op:flip1,pos:16,+cov  id:000017,src:000000,op:flip1,pos:16,+cov  id:000018,src:000000,op:flip1,pos:18,+cov  id:000019,src:000000,op:flip1,pos:18,+cov  id:000020,src:000000,op:flip1,pos:18,+cov  id:000021,src:000000,op:flip1,pos:18,+cov  id:000022,src:000000,op:flip1,pos:18,+cov  id:000023,src:000000,op:flip1,pos:18,+cov  id:000024,src:000000,op:flip1,pos:18,+cov  (+57 more)
afl-out2/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
docs/: .README.swp
(+566 files in other folders)
